--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This program gets the url images from reddit and then displays them on a page.
+This program gets the url images from reddit and then displays them on a page =).
 
